# football-forecast-lab

./: .env.example  .gitignore  MODEL_CARD.md  README.md  pyproject.toml
configs/: default.json
docs/: ROADMAP_15.md
models/: international_softmax_v1.json  score_model_dixon_coles_v1.json
scripts/: __init__.py  analyze_odds_movement.py  backtest_models.py  build_availability_report.py  build_dashboard.py  build_market_edges.py  build_mpp_picks.py  build_readme_assets.py  calibrate_models.py  capture_pre_match_snapshot.py  paper_bet.py  refresh_once.ps1  refresh_once.py  resolve_results.py  run_matchday_cycle.py  run_pipeline.py  set_secret.ps1  train_ml.py  train_score_model.py  validate_outputs.py  watch_refresh.py
src/football_forecast_lab/: __init__.py  __main__.py  availability.py  backtest.py  calibration.py  dashboard.py  elo.py  ensemble.py  espn.py  features.py  history.py  http_client.py  ledger.py  metrics.py  ml_models.py  model.py  odds_movement.py  optional_odds.py  pipeline.py  reporting.py  results.py  settings.py  strategy.py  tournament.py  trained_layer.py  training_data.py  utils.py  validation.py
tasks/: lessons.md  todo.md
tests/: test_metrics.py  test_model_math.py  test_operational_reports.py  test_results_ledgers.py  test_validation.py
