[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "football-forecast-lab"
version = "0.1.0"
description = "Football score, MPP and tournament forecasting pipeline."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
football-forecast = "football_forecast_lab.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

